--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -33,4 +33,4 @@ jobs:
             ${{ matrix.os }}-yarn-
       - run: yarn
       - run: yarn lint
-      - run: yarn test
+      - run: yarn coverage
