--- a/contracts/SteakBankImpl.template
+++ b/contracts/SteakBankImpl.template
@@ -231,7 +231,7 @@ contract SteakBankImpl is Context, Initializable, ReentrancyGuard {
     }
 
     function unstake(uint256 amount) nonReentrant mustInPeriod(NORMAL_PERIOD) notContract whenNotPaused external returns (bool) {
-        require(amount>=MINIMUM_UNSTAKE_AMOUNT, "unstake amount must be more than 0.8:BNB");
+        require(amount>=MINIMUM_UNSTAKE_AMOUNT, "unstake amount must be more than 0.8:LBNB");
         uint256 unstakeFee = amount.mul(unstakeFeeMolecular).div(unstakeFeeDenominator);
         IERC20(LBNB).safeTransferFrom(msg.sender, communityTaxVault, unstakeFee);
 
@@ -262,7 +262,7 @@ contract SteakBankImpl is Context, Initializable, ReentrancyGuard {
 
         Unstake memory unstake = unstakesMap[unstakeIndex];
         uint256 timestampThreshold = unstake.timestamp.sub(unstake.timestamp.mod(86400));
-        uint256 sbfBurnAmount = unstake.amount.mul(steps).mul(priceToAccelerateUnstake);
+        uint256 sbfBurnAmount = 0;
         uint256 actualSteps = 0;
         for (uint256 idx = unstakeIndex.sub(1) ; idx >= unstakeIndex.sub(steps); idx--) {
             Unstake memory priorUnstake = unstakesMap[idx];
@@ -272,6 +272,7 @@ contract SteakBankImpl is Context, Initializable, ReentrancyGuard {
             actualSteps++;
             sbfBurnAmount = sbfBurnAmount.add(priorUnstake.amount.mul(priceToAccelerateUnstake));
         }
+        sbfBurnAmount = sbfBurnAmount.add(unstake.amount.mul(actualSteps).mul(priceToAccelerateUnstake));
         return (actualSteps, sbfBurnAmount.div(PRICE_TO_ACCELERATE_UNSTAKE_PRECISION));
     }
 
